@@ -64,6 +64,8 @@ the system, and disclosure of information from private wikis.
 * (bug 23167) Check the watch checkbox by default if the watchcreations 
   preference is set.
 * (bug 23171) Improve IE6 version check to avoid false positives.
+* (bug 23176) Fixed upload warning override feature "upload new version", 
+  broken in 1.16 beta 1.
 
 === Changes since 1.16 beta 1 ===
 
